fixed overflowing scroll(lol)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,3 +16,8 @@
   width: 50vw;
   height: 100vh;
 }
+
+.output__code {
+  height: 100vh;
+  overflow-y: scroll;
+}
